Refactor List room: The responseRoom return a reponseRoomType